# amcache-forensic

./: Cargo.toml  README.md  clippy.toml  mkdocs.yml  release-plz.toml
.github/workflows/: release-plz.yml
core/: Cargo.toml
core/src/: lib.rs  tests.rs
core/tests/: cross_system.rs
core/tests/data/: README.md
docs/: PRD.md  index.md  validation.md
docs/decisions/: 0001-two-crate-core-forensic-split.md  0002-walk-the-hive-with-winreg-core.md  0003-forbid-unsafe-panic-free-fuzzed.md  0004-decode-both-modern-and-legacy-schemas.md  0005-sha1-from-fileid-encoding.md  0006-high-precision-findings-via-forensicnomicon.md  0007-msrv-floor-decoupled-from-toolchain.md  0008-cli-named-amcache4n6.md
forensic/: Cargo.toml
forensic/src/: lib.rs  tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_forensic.rs  fuzz_parse.rs
supply-chain/: config.toml
