[package]
name = "amcache-forensic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Windows Amcache.hve forensic analyzer — reports inventoried executables (path, SHA-1, publisher) and devices with graded findings (unsigned binary in a system path, execution from a staging directory), plus the amcache4n6 CLI."
license.workspace = true
authors.workspace = true
keywords = ["forensics", "amcache", "windows", "dfir", "execution"]
categories = ["command-line-utilities", "parser-implementations"]
repository.workspace = true
readme.workspace = true

[dependencies]
amcache-core = { workspace = true }
winreg-core = { workspace = true }
forensicnomicon = { workspace = true }

[lints]
workspace = true
